# AirTracker

./: .env.example  .gitignore  CLAUDE.md  README.md  plane_merge.py  plane_retreiver.py  run_airtracker.sh
datasets/: aircraft_types_full.jsonl  airports.jsonl
display/: office-airplane-tracker.yaml  planelookerupper.py
display/esp32-airtracker/: CMakeLists.txt  README.md  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32-c3-devkitm-1
display/esp32-airtracker/display/esp32-airtracker/include/: config.h
display/esp32-airtracker/include/: config.example.h  config.h
display/esp32-airtracker/main/: main.c
display/esp32-airtracker/release/: README-Windows.md  SHA256.txt  erase_flash.bat  flash_factory.bat
display/esp32-airtracker/src/: main.cpp
display/esp32-airtracker/tools/: check_config.py
display/esp32-idf-airtracker/: CMakeLists.txt  build.sh  sdkconfig.old
display/esp32-idf-airtracker-reference/: CMakeLists.txt  README_REFERENCE.md  partitions.csv  sdkconfig.defaults
display/esp32-idf-airtracker-reference/main/: CMakeLists.txt  airtracker_model.c  airtracker_model.h
display/esp32-idf-airtracker/main/: CMakeLists.txt  airtracker_ui.c  airtracker_ui.h  idf_component.yml  main.c  wifi_config.h
display/sim-lvgl/: CMakeLists.txt  README.md  commercial_jet_data.json  delta_test_data.json  lv_conf.h  lv_drv_conf.h  mqtt_to_file.py  sim_data.json  test_airport_data.json
display/sim-lvgl/src/: main.c
display/sim-lvgl/src/io/: json_loader.c  json_loader.h
display/sim-lvgl/src/model/: model.c  model.h
display/sim-lvgl/src/ui/: airplane_fallback.h  ui.c  ui.h
display/sim-lvgl/tools/: mqtt_to_file.py
homeassistant/: README.md  airtracker_card.yaml  airtracker_dashboard.yaml  airtracker_package.yaml
mqtt/: README.md
mqtt/producer/: README_images.md  cloudinary_config.example  detailed_test.py  image_manager.py  image_processor.py  image_processor_mock.py  image_requirements.txt  mqtt_publish.py  plane_merge.py  plane_retreiver.py  planelookerupper.py  publish_ha_discovery.sh  publish_mqtt.sh  test_image_urls.txt  test_integration.py  test_zipline_integration.py
mqtt/producer/datasets/: airlines.jsonl  countries.jsonl
mqtt/unified/: README.md  airtracker_complete.py
scripts/: README.md  publish_ha_discovery.sh  publish_mqtt.sh  requirements.txt  upload_airline_logos_zipline.py  upload_country_flags_zipline.py
